--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -11,10 +11,11 @@
         android:id="@+id/result_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/Result_RecyclerView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:visibility="gone"
         ></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
